fixed the horizontal scroll overflow

--- a/kara-app/src/styles/Gallery.module.css
+++ b/kara-app/src/styles/Gallery.module.css
@@ -86,6 +86,7 @@
     width: 60%;
     font-size: 2rem;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 .imageContainer {
@@ -105,6 +106,7 @@
     height: 80vh;
     width: 40%;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 .image {
@@ -131,6 +133,7 @@
     display: flex;
     align-items: center;
     box-shadow: inset 0 -10px 20px rgba(0, 0, 0, 0.4);
+    overflow: hidden;
 }
 
 .work {
@@ -150,6 +153,7 @@
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.7) 2px 2px 4px,
     rgba(0, 0, 0, 0.5) 3px 3px 8px;
+    box-sizing: border-box;
 }
 
 /******************************************Fourth Section***********************************************/
@@ -166,6 +170,7 @@
     height: 100vh;
     width: 100%;
     padding: 10px;
+    box-sizing: border-box;
 }
 
 .curlyImage {
@@ -197,6 +202,7 @@
     color: white;
     padding: 10px;
     z-index: 11;
+    box-sizing: border-box;
 }
 
 .innerContainer {
@@ -204,6 +210,7 @@
     justify-content: flex-end;
     width: 50%;
     padding: 20px;
+    box-sizing: border-box;
 }
 
 /******************************************Fifth Section***********************************************/
